third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/pop_positive.exp

Diagnostics:
error: expected 3 item(s), found 2
  ┌─ tests/checking/typing/v1-commands/pop_positive.move:7:9
  │
7 │         (_, _) = three();
  │         ^^^^^^
